# virus-war

./: .gitignore  AUTHORS  ChangeLog  NEWS  README  configure.ac
include/: Makefile.am  insider.h  virus-war.h
sources/: Makefile.am  game.c  main.c  mcts-ai.c  random-ai.c  utils.c
validation/: Makefile.am  game.c  insider.c  mcts-ai.c  nn.txt  parser.c  random-ai.c  utils.c
